Fix flaky visual test: it took screenshot before icon was visible

--- a/src/components/Tabs/TabButton.module.scss
+++ b/src/components/Tabs/TabButton.module.scss
@@ -64,7 +64,9 @@
     }
 
     span[data-icon] {
+      display: inline-block;
       font-size: 1.25rem;
+      width: 1.25rem;
     }
 
     &.top-icon,
